...
        {/* Recce */}
        <Stack.Screen
          name="WritingStageSelect"
          component={WritingStageSelect}
          options={{ title: 'Select Stage' }}
        />
        <Stack.Screen name="WritingEditor" component={WritingEditor} options={{ title: 'Recce' }} />

        {/* Rally */}
        <Stack.Screen
          name="ReadingStageSelect"
          component={ReadingStageSelect}
          options={{ title: 'Select Stage' }}
...
